--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,20 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
-  background-color: #f7f8fa;
-  color: #222;
-}
-
-a {
-  color: inherit;
-}
-
-button {
-  font-family: inherit;
-}
-
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
